--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "nodejs": "v24.12.0",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -23,59 +24,67 @@
     "prisma:studio": "prisma studio",
     "prisma:db:push": "prisma db push",
     "prisma:db:pull": "prisma db pull",
-    "prisma:format": "prisma format"
+    "prisma:format": "prisma format",
+    "prisma:init": "tsx prisma/init.ts"
   },
   "dependencies": {
-    "@keyv/redis": "^5.1.5",
-    "@nestjs/cache-manager": "^3.1.0",
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/jwt": "^11.0.2",
+    "@keyv/redis": "5.1.6",
+    "@nestjs/cache-manager": "3.1.0",
+    "@nestjs/common": "11.1.13",
+    "@nestjs/config": "4.0.3",
+    "@nestjs/core": "11.1.13",
+    "@nestjs/jwt": "11.0.2",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
-    "@prisma/adapter-mariadb": "^7.2.0",
-    "@prisma/client": "^7.2.0",
-    "@types/bcrypt": "^6.0.0",
-    "bcrypt": "^6.0.0",
-    "cache-manager": "^7.2.8",
-    "cacheable": "^2.3.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.3",
-    "dotenv": "^17.2.3",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "@nestjs/passport": "11.0.5",
+    "@nestjs/platform-express": "11.1.13",
+    "@prisma/adapter-mariadb": "7.3.0",
+    "@prisma/client": "7.3.0",
+    "@prisma/extension-accelerate": "3.0.1",
+    "@types/bcrypt": "6.0.0",
+    "bcrypt": "6.0.0",
+    "cache-manager": "7.2.8",
+    "cacheable": "2.3.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.3",
+    "dayjs": "1.11.19",
+    "dotenv": "17.2.3",
+    "nanoid": "5.1.6",
+    "nestjs-i18n": "10.6.0",
+    "nestjs-pino": "4.5.0",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
+    "pino-http": "11.0.0",
+    "pino-pretty": "13.1.3",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
-    "@types/express": "^5.0.6",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^22.19.3",
-    "@types/passport": "^1.0.17",
-    "@types/supertest": "^6.0.2",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
-    "jest": "^30.0.0",
-    "prettier": "^3.4.2",
-    "prisma": "^7.2.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.20.0"
+    "@eslint/eslintrc": "3.3.3",
+    "@eslint/js": "9.39.2",
+    "@nestjs/cli": "11.0.16",
+    "@nestjs/schematics": "11.0.9",
+    "@nestjs/testing": "11.1.13",
+    "@types/express": "5.0.6",
+    "@types/jest": "30.0.0",
+    "@types/node": "25.2.0",
+    "@types/passport": "1.0.17",
+    "@types/supertest": "6.0.3",
+    "eslint": "9.39.2",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.5",
+    "globals": "17.3.0",
+    "jest": "30.2.0",
+    "prettier": "3.8.1",
+    "prisma": "7.3.0",
+    "source-map-support": "0.5.21",
+    "supertest": "7.2.2",
+    "ts-jest": "29.4.6",
+    "ts-loader": "9.5.4",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.54.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -86,7 +95,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      ".+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
