--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.1.13",
     "@prisma/adapter-mariadb": "7.3.0",
+    "@prisma/adapter-pg": "7.3.0",
     "@prisma/client": "7.3.0",
     "@prisma/extension-accelerate": "3.0.1",
     "@types/bcrypt": "6.0.0",
@@ -53,6 +54,7 @@
     "nestjs-pino": "4.5.0",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
+    "pg": "8.18.0",
     "pino-http": "11.0.0",
     "pino-pretty": "13.1.3",
     "reflect-metadata": "0.2.2",
